ingress/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-headlamp
  namespace: kube-system
spec:
  ingressClassName: "traefik"
  rules:
  - host: headlamp.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-headlamp
            port:
              number: 80
